objects/QIDC__OK_Code_ims__c.object
<CustomObject>
    <description>This object is used to store codes from OneKey for picklist fields.</description>
    <fields>
        <fullName>QIDC__CodeBase_ims__c</fullName>
        <description>Represents CodeBase of OneKey Code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Represents CodeBase of OneKey Code.</inlineHelpText>
        <label>Code Base</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Country_UID_Code_ims__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field is used to store concatenation of country code and unique identifier of a code.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>This field is used to store concatenation of country code and unique identifier of a code.</inlineHelpText>
        <label>Country UID Code</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Country_ims__c</fullName>
        <description>Country ISO code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Country ISO code.</inlineHelpText>
        <label>Country</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Is_Active_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the code is active or not.</description>
        <inlineHelpText>Indicates whether the code is active or not.</inlineHelpText>
        <label>Is Active?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__LIS_Code_ims__c</fullName>
        <description>Code group of the attribute.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Code group of the attribute.</inlineHelpText>
        <label>LIS Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Label_ims__c</fullName>
        <description>Default label for OneKey code.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Default label for OneKey code.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OK_Last_Modified_Date_ims__c</fullName>
        <description>Last modified date of OneKey code at OneKey API.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Last modified date of OneKey code at OneKey API.</inlineHelpText>
        <label>OK Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__UID_Code_ims__c</fullName>
        <description>Unique identifier of a code.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <inlineHelpText>Unique identifier of a code.</inlineHelpText>
        <label>UID Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>OneKey Code</label>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Country_ims__c</columns>
        <columns>QIDC__Label_ims__c</columns>
        <columns>QIDC__LIS_Code_ims__c</columns>
        <columns>QIDC__OK_Last_Modified_Date_ims__c</columns>
        <columns>QIDC__UID_Code_ims__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>QIDC__LEX</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Country_ims__c</columns>
        <columns>QIDC__Label_ims__c</columns>
        <columns>QIDC__LIS_Code_ims__c</columns>
        <columns>QIDC__OK_Last_Modified_Date_ims__c</columns>
        <columns>QIDC__UID_Code_ims__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__LIS_Code_ims__c</field>
            <operation>equals</operation>
            <value>LEX</value>
        </filters>
        <label>LEX</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>OneKey Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OneKey Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>